[gd_scene load_steps=32 format=3 uid="uid://bq52os1fhi6w8"]

[ext_resource type="Script" uid="uid://ops6apdgsm8w" path="res://scenes/district_deck/district_deck.gd" id="1_xy47f"]
[ext_resource type="Script" uid="uid://bbdpyr8inju5f" path="res://resources/districts/district_data.gd" id="2_1yniy"]
[ext_resource type="Resource" uid="uid://contlwpmvss74" path="res://resources/districts/castle.tres" id="3_cqdqd"]
[ext_resource type="Resource" uid="uid://c7fyclwrr711x" path="res://resources/districts/cathedrel.tres" id="4_4liln"]
[ext_resource type="Resource" uid="uid://djtckypk5elsm" path="res://resources/districts/manor.tres" id="4_rs6yb"]
[ext_resource type="Resource" uid="uid://by1gwrxeljrxg" path="res://resources/districts/palace.tres" id="5_o306x"]
[ext_resource type="Resource" uid="uid://dxuxvnuurmng7" path="res://resources/districts/church.tres" id="5_qfr68"]
[ext_resource type="Resource" uid="uid://culfm22xp2n4" path="res://resources/districts/barracks.tres" id="6_bu3h1"]
[ext_resource type="Resource" uid="uid://h1sq56k5rsq4" path="res://resources/districts/armory.tres" id="7_qw3ip"]
[ext_resource type="Resource" uid="uid://cbsqt6ic2128a" path="res://resources/districts/bell_tower.tres" id="8_jg3d7"]
[ext_resource type="Resource" uid="uid://cndr42n76n8mb" path="res://resources/districts/montastery.tres" id="8_rfsum"]
[ext_resource type="Resource" uid="uid://cnxnaqnmd2mmp" path="res://resources/districts/temple.tres" id="9_podof"]
[ext_resource type="Resource" uid="uid://dbbcqtgqb0qqr" path="res://resources/districts/fortress.tres" id="11_vhoba"]
[ext_resource type="Resource" uid="uid://d17rqqkuypdqv" path="res://resources/districts/prison.tres" id="12_0i5gn"]
[ext_resource type="Resource" uid="uid://bnrktfcjuvsad" path="res://resources/districts/watchtower.tres" id="13_fedlf"]
[ext_resource type="Resource" uid="uid://d3hh60bjd0hq3" path="res://resources/districts/docks.tres" id="14_6xb2q"]
[ext_resource type="Resource" uid="uid://cdggan5el3esw" path="res://resources/districts/harbor.tres" id="15_oygv6"]
[ext_resource type="Resource" uid="uid://cc2jgi37r8q3d" path="res://resources/districts/market.tres" id="16_vtieq"]
[ext_resource type="Resource" uid="uid://dqepjibqn4jpu" path="res://resources/districts/tavern.tres" id="17_8605g"]
[ext_resource type="Resource" uid="uid://cqg0c26kskh1w" path="res://resources/districts/town_hall.tres" id="18_uk3hh"]
[ext_resource type="Resource" uid="uid://2rvtwebx5ttn" path="res://resources/districts/trading_post.tres" id="19_q4p6p"]
[ext_resource type="Resource" uid="uid://bot5w3cgjrvdh" path="res://resources/districts/hospital.tres" id="22_2q1gy"]
[ext_resource type="Resource" uid="uid://1def4a4ctktc" path="res://resources/districts/imperial_treasure.tres" id="23_kieff"]
[ext_resource type="Resource" uid="uid://bdb80smbqigjr" path="res://resources/districts/keep.tres" id="24_jdika"]
[ext_resource type="Resource" uid="uid://bjo7nit74mm76" path="res://resources/districts/lighthouse.tres" id="25_yx6iy"]
[ext_resource type="Resource" uid="uid://dog3ox055j4i5" path="res://resources/districts/map_room.tres" id="26_6dpol"]
[ext_resource type="Resource" uid="uid://b4v5oa452ab42" path="res://resources/districts/necropolis.tres" id="27_lcwcr"]
[ext_resource type="Resource" uid="uid://b0i64xm1e2qc7" path="res://resources/districts/park.tres" id="28_q6c5w"]
[ext_resource type="Resource" uid="uid://dgqp4vmvxxl0d" path="res://resources/districts/poor_house.tres" id="29_xe23o"]
[ext_resource type="Resource" uid="uid://pt8rcrjy58u6" path="res://resources/districts/school_of_magic.tres" id="30_molrx"]
[ext_resource type="Resource" uid="uid://chjfkjgao5bke" path="res://resources/districts/wish_fountain.tres" id="31_drf74"]

[node name="DistrictDeck" type="Node2D" groups=["district_deck"]]
script = ExtResource("1_xy47f")
gold_card_resources = Array[ExtResource("2_1yniy")]([ExtResource("3_cqdqd"), ExtResource("4_rs6yb"), ExtResource("5_o306x")])
blue_card_resources = Array[ExtResource("2_1yniy")]([ExtResource("4_4liln"), ExtResource("5_qfr68"), ExtResource("8_rfsum"), ExtResource("9_podof")])
red_card_resources = Array[ExtResource("2_1yniy")]([ExtResource("6_bu3h1"), ExtResource("11_vhoba"), ExtResource("12_0i5gn"), ExtResource("13_fedlf")])
green_card_resources = Array[ExtResource("2_1yniy")]([ExtResource("14_6xb2q"), ExtResource("15_oygv6"), ExtResource("16_vtieq"), ExtResource("17_8605g"), ExtResource("18_uk3hh"), ExtResource("19_q4p6p")])
purple_card_resources = Array[ExtResource("2_1yniy")]([ExtResource("7_qw3ip"), ExtResource("8_jg3d7"), ExtResource("22_2q1gy"), ExtResource("23_kieff"), ExtResource("24_jdika"), ExtResource("25_yx6iy"), ExtResource("26_6dpol"), ExtResource("27_lcwcr"), ExtResource("28_q6c5w"), ExtResource("29_xe23o"), ExtResource("30_molrx"), ExtResource("31_drf74")])

[node name="CardsInDeck" type="Node2D" parent="."]

[node name="DeckControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="DeckControls"]
layout_mode = 0
offset_left = -45.0
offset_top = -61.0
offset_right = 45.0
offset_bottom = -30.0
text = "Draw Card"

[node name="Button2" type="Button" parent="DeckControls"]
layout_mode = 0
offset_left = -40.0
offset_top = 17.0
offset_right = 57.0
offset_bottom = 71.0
scale = Vector2(0.81, 0.81)
text = "Place card on bottom"
autowrap_mode = 2

[node name="TimeBetweenCardDrawTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="DeckControls/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="DeckControls/Button2" to="." method="_on_button_2_pressed"]
